crates/peach_app/src/snapshots/peach_app__operation__tests__fs_undo_file_restored.snap
---
source: crates/peach_app/src/operation.rs
expression: to_value(actual)
---
<file_undo
  path="/home/user/restored_file.txt"
  status="restored"
><![CDATA[1   |-Original content
2   |-Before changes
  1 |+Modified content
  2 |+After restoration
]]>
</file_undo>
