crates/peach_app/src/snapshots/peach_app__operation__tests__fs_undo_no_changes.snap
---
source: crates/peach_app/src/operation.rs
expression: to_value(actual)
---
<file_undo
  path="/home/user/unchanged_file.txt"
  status="no_changes"
>
</file_undo>
