crates/peach_app/src/snapshots/peach_app__operation__tests__fs_undo_success.snap
---
source: crates/peach_app/src/operation.rs
expression: to_value(actual)
---
<file_undo
  path="/home/user/test.txt"
  status="restored"
><![CDATA[1   |-ABC
  1 |+PQR
]]>
</file_undo>
